[package]
name = "optical_detector"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", default-features = true }
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[build-dependencies]
cc = "1"

[target.'cfg(target_os = "linux")'.dependencies]

